--- a/home.html
+++ b/home.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HONK Prototype Mockup</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>HONK Prototype</h1>
+    <p class="subtitle">Mockup Showcase</p>
+  </header>
 
+  <main>
+    <section class="media">
+      <!-- Replace this with your own video/image link -->
+      <iframe
+        src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+        frameborder="0"
+        allowfullscreen
+      ></iframe>
+    </section>
+
+    <section class="description">
+      <h2>About This Prototype</h2>
+      <p>This is a demonstration of the HONK game prototype. It shows core mechanics, gameplay goals, and level concepts. The video above is a walk-through of the current build.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Created for demonstration purposes. Not affiliated with Google Sites.</p>
+  </footer>
+</body>
+</html>
